--- a/src/stylesheets/vars.scss
+++ b/src/stylesheets/vars.scss
@@ -9,6 +9,8 @@ $container-max-widths: (
 );
 
 $color-default: mat.get-color-from-palette(mat.$gray-palette, 900);
+$color-light: #fff;
+$color-dark: #000;
 $color-primary: mat.get-color-from-palette(mat.$cyan-palette, 500);
 $color-active: mat.get-color-from-palette(mat.$cyan-palette, 700);
 $color-accent: mat.get-color-from-palette(mat.$pink-palette, A200);
