--- a/src/app/components/add-user-form/add-user-form.component.html
+++ b/src/app/components/add-user-form/add-user-form.component.html
@@ -3,7 +3,7 @@
     <h1 class="page-title">Добавить сотрудника</h1>
 
     <form class="form" [formGroup]="addUserForm" (ngSubmit)="onSubmit()">
-      <mat-form-field class="input">
+      <mat-form-field class="form__input">
         <mat-label>Фамилия</mat-label>
         <input
           matInput
@@ -23,7 +23,7 @@
         </mat-error>
       </mat-form-field>
 
-      <mat-form-field class="input">
+      <mat-form-field class="form__input">
         <mat-label>Имя</mat-label>
         <input
           matInput
@@ -43,7 +43,7 @@
         </mat-error>
       </mat-form-field>
 
-      <mat-form-field class="input">
+      <mat-form-field class="form__input">
         <mat-label>Отчество</mat-label>
         <input
           matInput
