--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -14,5 +14,5 @@
       <div class="user__field-item-value">{{ user.middlename }}</div>
     </div>
   </div>
-  <button (click)="returnId(user.id)" mat-raised-button color="primary">удалить сотрудника</button>
+  <button class="user__btn" (click)="returnId(user.id)" mat-raised-button color="primary">удалить сотрудника</button>
 </div>
