--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -1,9 +1,14 @@
-<div class="users-list">
-  <div *ngIf="users.length; else noUsers" class="">
-    <app-user (outDeletedUserId)="removeUser($event)" *ngFor="let user of users; let i = index" [user]="user" [index]="i" />
+<div class="page-wrapper">
+  <div class="container">
+    <div>
+      <div *ngIf="users.length; else noUsers" class="users-list">
+        <app-user (outDeletedUserId)="removeUser($event)" *ngFor="let user of users; let i = index" [user]="user" [index]="i" />
+      </div>
+      <ng-template #noUsers>
+        <p>Нет записей о пользователях</p>
+      </ng-template>
+    </div>
   </div>
-  <ng-template #noUsers>
-    <p>Нет записей о пользователях</p>
-  </ng-template>
 </div>
+
 
