--- a/src/app/components/UI/header/header.component.scss
+++ b/src/app/components/UI/header/header.component.scss
@@ -1,19 +1,40 @@
+@import 'src/stylesheets/vars';
+
 .header {
   padding: 0;
+  height: 48px;
+  .mat-mdc-raised-button {
+    display: inline-block;
+    height: 100%;
 
-  &__btn {
-    .mdc-button__label {
-      height: 100%;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
 
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 16px;
+    text-decoration: none;
 
-      display: flex;
-      align-items: center;
-      text-align: center;
-      text-transform: uppercase;
-      color: #fff;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: #fff;
+    border-radius: 0;
+    position: relative;
+
+    &::after {
+      position: absolute;
+      content: "";
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: transparent;
+    }
+
+    &.active-button {
+      &::after {
+        background-color: $color-accent;
+      }
     }
   }
 }
