--- a/src/app/components/users-list/users-list.component.scss
+++ b/src/app/components/users-list/users-list.component.scss
@@ -1,6 +1,6 @@
 .users-list {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  row-gap: 115px;
-  padding-bottom: 100px;
+  row-gap: 10rem;
+  padding-bottom: 10rem;
 }
