--- a/src/app/components/UI/header/header.component.scss
+++ b/src/app/components/UI/header/header.component.scss
@@ -2,14 +2,14 @@
 
 .header {
   padding: 0;
-  height: 48px;
+  height: 3rem;
   .mat-mdc-raised-button {
     display: inline-block;
     height: 100%;
 
     font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 0.9rem;
+    line-height: 1rem;
 
     text-decoration: none;
 
@@ -17,7 +17,7 @@
     align-items: center;
     text-align: center;
     text-transform: uppercase;
-    color: #fff;
+    color: $color-light;
     border-radius: 0;
     position: relative;
 
@@ -27,7 +27,7 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 3px;
+      height: 0.15rem;
       background-color: transparent;
     }
 
