--- a/src/app/components/add-user-form/add-user-form.component.scss
+++ b/src/app/components/add-user-form/add-user-form.component.scss
@@ -7,22 +7,22 @@
   &__input {
     background-color: transparent;
 
-    .mat-mdc-text-field-wrapper {
-      background-color: transparent;
+    .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+      background-color: whitesmoke;
     }
     & + & {
-      margin-top: 25px;
+      margin-top: 1.7rem;
     }
   }
 
   &__btn {
     width: max-content;
-    margin-top: 30px;
+    margin-top: 2rem;
     font-weight: 500;
-    line-height: 16px;
+    line-height: 1rem;
     letter-spacing: 0.0357143em;
     text-transform: uppercase;
     color: $color-light;
-    padding: 10px 8px;
+    padding: 0.7rem 0.6rem;
   }
 }
