--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -3,29 +3,29 @@
 .user {
   &__title {
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: rgba(0, 0, 0, 0.87);
-    margin-bottom: 15px;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: rgba($color-dark, 0.87);
+    margin-bottom: 1rem;
     display: inline-block;
   }
 
   &__field-item-title {
-    margin-right: 10px;
+    margin-right: 1rem;
   }
 
   &__field-item {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 12px 16px 12px 0;
+    padding: 0.8rem 1rem 0.9rem 0;
   }
 
   &__btn {
-    margin-top: 20px;
+    margin-top: 1.2rem;
     color: $color-light;
-    padding: 10px 8px;
-    letter-spacing: 0.0357143em;
+    padding: 0.7rem 0.5rem;
+    letter-spacing: 0.0357143rem;
     text-transform: uppercase;
   }
 }
